Title corrected: Wheather -> Weather

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--    Banner -->
 <!--------------->
     <div class="pure-u-1 center-content banner">
-        <h2 class="banner-text">Wheather Dashboard</h2>
+        <h2 class="banner-text">Weather Dashboard</h2>
     </div>
 </div>
 
@@ -72,7 +72,7 @@
                         <div class="forecast-value">UV Index: <label class="" id="lbl-uvindex"></label></div>
                     </div>
                     <div class="pure-u-1-6">&nbsp;</div>
-                    <div class="pure-u-1-6" style="madrgin-bottom:130px;margin-right:auto;">
+                    <div class="pure-u-1-6">
                         <div class="currdent_weather detail-forecast-image-temp">
                             <div id="img_forecast" class=""></div>
                             <div id="current_description_temp" class="current_description"></div>
