Displays modal window when the search does not returns a valid city.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
     </div>
 </div>
 
+<div id="open-modal" class="modal-window">
+    <div>
+        <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
+        <h1>Error</h1>
+        <div>Our database does not recognize the city you searched for. Please select another city.</div>
+    </div>
+</div>
+
 <script src="./assets/scripts/weather-dashboard.js"></script>
 <script src="./assets/scripts/weather-dashboard-jquery.js"></script>
 </body>
