Displays "ver 1.0" along with the app title.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!--    Banner -->
 <!--------------->
     <div class="pure-u-1 center-content banner">
-        <h2 class="banner-text">Weather Dashboard</h2>
+        <h2 class="banner-text">Weather Dashboard 1.0</h2>
     </div>
 </div>
 
